--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-position: center;
   background-image: url(./assets/images/bg.jpeg); 
+  background-attachment: fixed ; 
 }
 
 code {
