--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -1,5 +1,6 @@
 .intro-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
