--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -2,6 +2,7 @@
 @import url(./button.css);
 @import url(./caroussel.css);
 @import url(./Intro.css);
+@import url(./flip-transition.css);
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 :root{
