--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -6,7 +6,7 @@
 
 .frame {
     background-color: transparent;
-    color: #7c1a0c;
-    border: 2px solid #7c1a0c; 
+    color: var(--background-header);
+    border: 2px solid var(--background-header); 
     border-radius: 10%;
 }
