--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -3,10 +3,11 @@
 @import url(./caroussel.css);
 @import url(./Intro.css);
 @import url(./flip-transition.css);
+@import url(./maning.css);
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 :root{
-    --yellow-header: #DCB03C;
+    --yellow-header: rgba(220, 176, 59, 0.9);
     --background-header: #502F30;
     --letter: 'Roboto Slab', serif;
 }
