--- a/src/styles/maning.css
+++ b/src/styles/maning.css
@@ -1,15 +1,17 @@
 .containerCardsSecond {
-    margin-top: 10%;
+    margin-top: 5%;
     padding: 0 10%;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-gap: 5% 0%;
     margin-bottom: 20%;
+
   }
   .containerCardsSecondBox {
     display: flex;
-    flex-direction: row;
-    gap: 10%;
+    flex-direction: column;
+    align-items: center;
+  
   }
   
   .cointainerInfo {
@@ -17,17 +19,23 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-  }
-  .cointainerMeaning {
     background-color: var(--yellow-header);
-   
+    border-radius: 9px;
+    margin-top: 10%;
+  }
+
+  .cointainerMeaning {
+    background-color: var(--background-header);
+    inline-size: 150px;
+    overflow-wrap: break-word;
     padding: 10%;
     border-radius: 9px;
-    color: var(--background-header);
+    color: var(--yellow-header);
+    margin-bottom: 10%;
   }
   
   
-  @media (min-width: 992px) {
+  @media only screen and (min-width: 600px) {
     .containerCardsSecond {
       padding: 0 10%;
       display: grid;
