--- a/src/styles/maning.css
+++ b/src/styles/maning.css
@@ -17,14 +17,21 @@
   .cointainerInfo {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
+    inline-size: 150px;
+    overflow-wrap: break-word;
+    padding: 10%;
     background-color: var(--yellow-header);
     border-radius: 9px;
     margin-top: 10%;
   }
 
   .cointainerMeaning {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     background-color: var(--background-header);
     inline-size: 150px;
     overflow-wrap: break-word;
@@ -60,7 +67,6 @@
   
     .cointainerInfo {
       align-items: center;
-      width: 75%;
     }
   
     .cointainerMeaning {
