Create not-found image

--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -4,6 +4,7 @@
 @import url(./Intro.css);
 @import url(./flip-transition.css);
 @import url(./maning.css);
+@import url(./not-found.css);
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 :root{
