--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -10,3 +10,18 @@
     border: 2px solid var(--background-header); 
     border-radius: 10%;
 }
+
+.cerverus-button {
+    
+    text-decoration: none;
+    margin: 0 auto;
+    margin-top: 2vh;
+    height: 4vh;
+    width: 22vh;
+    padding: 1vh;
+    text-align: center;
+    color: var(--background-header);
+    background: var(--yellow-header);
+    
+    border-radius: 10%;
+}
